media/qbittorrent/qbittorrent-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qbittorrent
  labels:
    kubernetes.io/metadata.name: qbittorrent
    media-ns: authorized
