media/qbittorrent/qbittorrent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: qbittorrent
        image: linuxserver/qbittorrent:20.04.1
        ports:
          - name: http
            containerPort: 8080
        volumeMounts:
          - name: qbittorrent-config
            mountPath: /config
          - name: qbittorrent-downloads
            mountPath: /downloads
        resources:
          requests:
            cpu: 300m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
      volumes:
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-pvc
        - name: qbittorrent-downloads
          persistentVolumeClaim:
            claimName: qbittorrent-download-pvc
