media/qbittorrent/qbittorrent-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-ingressroute
  namespace: gluetun
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`qbittorrent.ltc.tsphotoclicks.net`)
      services:
        - name: qbittorrent
          port: 8080
  tls:
    secretName: gluetun-internal-secret
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: gluetun
spec:
  selector:
    app: qbittorrent
  ports:
    - port: 8080
      targetPort: 8080
