media/qbittorrent/qbittorrent-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qbittorrent-network
  namespace: qbittorrent
spec:
  podSelector:
    matchLabels:
      app: qbittorrent
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: traefik
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            name: gluetun
      ports:
        - protocol: TCP
          port: 1080
    - to:
      - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
    - to:
      - ipBlock:
          cidr: 10.42.0.0/16
    - to:
      - ipBlock:
          cidr: 10.43.0.0/16
